# VIO_lesson

./: README.md
ch1/: CMakeLists.txt  README.md  quaternionupdate.cpp
ch2/: README.md  readme_ch2.txt
ch2/code_utils/: CMakeLists.txt
ch3/CurveFitting_LM/: readme.md
ch4/nullspace_test/: readme.md
ch5/BA_schur/: readme.md
ch6/: CMakeLists.txt  README.md  triangulate.cpp
ch7/vins_sys_code/: CMakeLists.txt  README.md
ch7/vins_sys_code/config/: cam_pose.txt  euroc_config.yaml  imu_pose_noise.txt
ch7/vins_sys_code/config/keyframe/: all_points_0.txt  all_points_1.txt  all_points_10.txt  all_points_100.txt  all_points_101.txt  all_points_102.txt  all_points_103.txt  all_points_104.txt  all_points_105.txt  all_points_106.txt  all_points_107.txt  all_points_108.txt  all_points_109.txt  all_points_11.txt  all_points_110.txt  all_points_111.txt  all_points_112.txt  all_points_113.txt  all_points_114.txt  all_points_115.txt  all_points_116.txt  all_points_117.txt  all_points_118.txt  all_points_119.txt  all_points_12.txt  all_points_120.txt  all_points_121.txt  all_points_122.txt  all_points_123.txt  all_points_124.txt  all_points_125.txt  all_points_126.txt  all_points_127.txt  all_points_128.txt  all_points_129.txt  all_points_13.txt  all_points_130.txt  (+563 more)
ch7/vins_sys_code/include/: System.h  feature_tracker.h  parameters.h
ch7/vins_sys_code/src/: System.cpp  estimator.cpp  feature_tracker.cpp
ch7/vins_sys_code/test/: run_euroc.cpp
ch7/vio_data_simultation/main/: gener_alldata.cpp
ch7/vio_data_simultation/python_tool/: draw_trajcory.py
ch9/: README.md
